fix(button): prevent text wrapping

--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -4,6 +4,7 @@ docs-button {
   color: var(--accent-color);
   display: inline-block;
   font-weight: 600;
+  white-space: nowrap;
 }
 
 docs-button a,
